--- a/Packages.props
+++ b/Packages.props
@@ -55,46 +55,11 @@
     <PackageReference Update="SkiaSharp" Version="2.88.6" />
     <PackageReference Update="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.6" Condition="$([MSBuild]::IsOsPlatform('Linux'))" />
     <PackageReference Update="TextCopy" Version="6.2.1" />
-    <PackageReference Update="Microsoft.SemanticKernel" Version="1.19.0" />
+    <PackageReference Update="Microsoft.SemanticKernel" Version="1.26.0" />
 
-    <PackageReference Update="OpenAI" Version="2.0.0-beta.10" />
-    <PackageReference Update="System.ClientModel" Version="1.1.0-beta.7" />
+    <PackageReference Update="OpenAI" Version="2.0.0" />
+    <PackageReference Update="System.ClientModel" Version="1.1.0 " />
   </ItemGroup>
-
-  <ItemGroup Label="Product packages">
-    
-  <!--
-  <PackageVersion Include="Microsoft.SqlServer.Management.SqlParser" Version="172.0.1" />
-  <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
-  <PackageVersion Include="StreamJsonRpc" Version="1.5.68" />
-  <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
-  <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
-  <PackageVersion Include="Microsoft.Extensions.Logging" Version="8.0.0" />
-  <PackageVersion Include="OpenTelemetry" Version="1.7.0" />
-  <PackageVersion Include="OpenTelemetry.Api" Version="1.7.0" />
-  <PackageVersion Include="Azure.Monitor.OpenTelemetry.Exporter" Version="1.2.0" />
-  <PackageVersion Include="System.Text.Json" Version="8.0.0" />
-  <PackageVersion Include="Azure.Identity" Version="1.11.4" />
-  <PackageVersion Include="Azure.AI.ContentSafety" Version="1.0.0" />-->
-</ItemGroup>
-
-<!--
-  <ItemGroup Label="Test packages">
-    <PackageVersion Include="coverlet.collector" Version="6.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
-    <PackageVersion Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0" />
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
-    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
-    <PackageVersion Include="Moq" Version="4.20.70" />
-    <PackageVersion Include="MSTest.TestAdapter" Version="3.4.3" />
-    <PackageVersion Include="MSTest.TestFramework" Version="3.4.3" />
-    <PackageVersion Include="NUnit" Version="3.11.0" />
-    <PackageVersion Include="YamlDotNet" Version="15.1.2" />
-  </ItemGroup>
-  -->
 
   <!-- When updating version of Dependencies in the below section, please also update the version in the following files:
 		packages\Microsoft.SqlTools.ManagedBatchParser\Microsoft.SqlTools.ManagedBatchParser.nuspec-->
@@ -110,7 +75,6 @@
     <PackageReference Update="Microsoft.Extensions.DependencyModel" Version="8.0.0" />
     <PackageReference Update="Microsoft.Extensions.FileSystemGlobbing" Version="8.0.0" />
     <PackageReference Update="System.Composition" Version="8.0.0" />
-    <PackageReference Update="System.Configuration.ConfigurationManager" Version="8.0.0" />
     <PackageReference Update="System.Configuration.ConfigurationManager" Version="9.0.0-rc.2.24473.5" />
     <PackageReference Update="System.Drawing.Common" Version="5.0.3" />
     <PackageReference Update="System.IO.Packaging" Version="9.0.0-rc.2.24473.5" />
