added cs proj file

--- a/test/Microsoft.SqlTools.ServiceLayer.IntegrationTests/Microsoft.SqlTools.ServiceLayer.IntegrationTests.csproj
+++ b/test/Microsoft.SqlTools.ServiceLayer.IntegrationTests/Microsoft.SqlTools.ServiceLayer.IntegrationTests.csproj
@@ -44,6 +44,14 @@
     <None Include="AzureFunctions\AzureFunctionTestFiles\*" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="LanguageServer\AdventureWorksDeploymentTestScript.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="LanguageServer\AdventureWorksDeploymentTestScript.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <Folder Include="DacFx\Dacpacs\" />
   </ItemGroup>
   <ItemGroup>
