--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -33,6 +33,7 @@
     <!-- This is required for IDE0005 to fail the build https://github.com/dotnet/roslyn/issues/41640 -->
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <Nullable>enable</Nullable>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <!-- For official builds we want to set this so that "official build" settings such as normalized source
