--- a/Packages.props
+++ b/Packages.props
@@ -21,7 +21,7 @@
     <!-- TODO: Upgrade package and use Token Credential design -->
     <PackageReference Update="Microsoft.Data.SqlClient.AlwaysEncrypted.AzureKeyVaultProvider" Version="1.1.1" />
     <PackageReference Update="Microsoft.SqlServer.Management.SmoMetadataProvider" Version="170.18.0" />
-    <PackageReference Update="Microsoft.SqlServer.DacFx" Version="170.0.94" />
+    <PackageReference Update="Microsoft.SqlServer.DacFx" Version="170.1.23-preview" />
     <PackageReference Update="Microsoft.SqlServer.DacFx.Projects" Version="0.4.0-preview" />
     <PackageReference Update="Microsoft.Azure.Kusto.Data" Version="12.2.3" />
     <PackageReference Update="Microsoft.Azure.Kusto.Language" Version="9.0.4" />
