--- a/src/Microsoft.SqlTools.Authentication/Microsoft.SqlTools.Authentication.csproj
+++ b/src/Microsoft.SqlTools.Authentication/Microsoft.SqlTools.Authentication.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Azure.Core" Version="1.41.0" />
 		<PackageReference Include="Azure.Identity" />
 		<PackageReference Include="Microsoft.Data.SqlClient" />
 		<PackageReference Include="Microsoft.Identity.Client.Extensions.Msal" />
