--- a/scripts/packages.config
+++ b/scripts/packages.config
@@ -4,7 +4,7 @@
     <package id="Newtonsoft.Json" version="13.0.2" />
     <package id="Microsoft.Data.Tools.StringResourceTool" version="4.3.0" />
     <package id="Mono.TextTransform" version="1.0.0" />
-    <package id="mssql.XliffParser" version="0.5.3" />
-    <package id="mssql.ResX" version="0.2.0" />
+    <package id="fmdev.XliffParser" version="0.5.6" />
+    <package id="fmdev.ResX" version="0.3.2" />
     <package id="xunit.runner.console" version="2.4.1" />
 </packages>
