--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -127,7 +127,12 @@ steps:
     reportgenerator -reports:$(Agent.TempDirectory)/**/coverage.cobertura.xml -targetdir:$(Agent.TempDirectory)/coverlet/reports -reporttypes:"Cobertura"
   displayName: Create Code coverage report
 
-- task: PublishCodeCoverageResults@1
+- script: |
+    dotnet tool install --global CodecovUploader
+    codecov -t $(CODECOV_TOKEN) -f $(Agent.TempDirectory)/coverlet/reports/Cobertura.xml
+  displayName: Upload Code coverage report to CodeCov
+
+- task: PublishCodeCoverageResults@2
   displayName: 'Publish code coverage report'
   inputs:
     codeCoverageTool: 'Cobertura'
