Change secret to env variable syntax

--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -144,7 +144,8 @@ steps:
         exit 1
     }
 
-    .\codecov.exe -t $(CODECOV_TOKEN) -f $(Agent.TempDirectory)/coverlet/reports/Cobertura.xml
+    #CODECOV_TOKEN needs to be added as a pipeline variable in ADO
+    .\codecov.exe -t ${env:CODECOV_TOKEN} -f $(Agent.TempDirectory)/coverlet/reports/Cobertura.xml
   displayName: Upload Code coverage report to CodeCov
 
 - task: PublishCodeCoverageResults@2
