--- a/src/Microsoft.SqlTools.ServiceLayer/Microsoft.SqlTools.ServiceLayer.csproj
+++ b/src/Microsoft.SqlTools.ServiceLayer/Microsoft.SqlTools.ServiceLayer.csproj
@@ -39,22 +39,19 @@
 
   <ItemGroup>
     <Reference Include="SqlCopilotCommon">
-      <HintPath>..\..\bin\ref1\SqlCopilotCommon.dll</HintPath>
+      <HintPath>..\..\bin\ref\SqlCopilotCommon.dll</HintPath>
     </Reference>
     <Reference Include="ScriptoriaCommonDefs">
-      <HintPath>..\..\bin\ref1\ScriptoriaCommonDefs.dll</HintPath>
+      <HintPath>..\..\bin\ref\ScriptoriaCommonDefs.dll</HintPath>
     </Reference>
     <Reference Include="Scriptoria">
-      <HintPath>..\..\bin\ref1\Scriptoria.dll</HintPath>
+      <HintPath>..\..\bin\ref\Scriptoria.dll</HintPath>
     </Reference>    
     <Reference Include="SqlScriptoria">
-      <HintPath>..\..\bin\ref1\SqlScriptoria.dll</HintPath>
+      <HintPath>..\..\bin\ref\SqlScriptoria.dll</HintPath>
     </Reference>
     <Reference Include="SqlScriptoriaCommon">
-      <HintPath>..\..\bin\ref1\SqlScriptoriaCommon.dll</HintPath>
-    </Reference>
-    <Reference Include="YamlDotNet">
-      <HintPath>..\..\bin\ref\YamlDotNet.dll</HintPath>
+      <HintPath>..\..\bin\ref\SqlScriptoriaCommon.dll</HintPath>
     </Reference>
   </ItemGroup>
 
