--- a/Packages.props
+++ b/Packages.props
@@ -21,8 +21,8 @@
     <!-- TODO: Upgrade package and use Token Credential design -->
     <PackageReference Update="Microsoft.Data.SqlClient.AlwaysEncrypted.AzureKeyVaultProvider" Version="1.1.1" />
     <PackageReference Update="Microsoft.SqlServer.Management.SmoMetadataProvider" Version="170.18.0" />
-    <PackageReference Update="Microsoft.SqlServer.DacFx" Version="170.2.41-preview" />
-    <PackageReference Update="Microsoft.SqlServer.DacFx.Projects" Version="0.4.0-preview" />
+    <PackageReference Update="Microsoft.SqlServer.DacFx" Version="170.2.70" />
+    <PackageReference Update="Microsoft.SqlServer.DacFx.Projects" Version="0.5.2-preview" />
     <PackageReference Update="Microsoft.Azure.Kusto.Data" Version="12.2.3" />
     <PackageReference Update="Microsoft.Azure.Kusto.Language" Version="9.0.4" />
     <PackageReference Update="Microsoft.SqlServer.Assessment" Version="[1.1.17]" />
