--- a/Packages.props
+++ b/Packages.props
@@ -66,7 +66,7 @@
   <ItemGroup>
     <PackageReference Update="Azure.Identity" Version="1.12.0" />
     <PackageReference Update="Microsoft.Data.SqlClient" Version="5.1.7" />
-    <PackageReference Update="Microsoft.SqlServer.SqlManagementObjects" Version="180.9.0-preview" />
+    <PackageReference Update="Microsoft.SqlServer.SqlManagementObjects" Version="180.10.0" />
     <PackageReference Update="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
