--- a/Packages.props
+++ b/Packages.props
@@ -22,6 +22,7 @@
     <PackageReference Update="Microsoft.Data.SqlClient.AlwaysEncrypted.AzureKeyVaultProvider" Version="1.1.1" />
     <PackageReference Update="Microsoft.SqlServer.Management.SmoMetadataProvider" Version="170.18.0" />
     <PackageReference Update="Microsoft.SqlServer.DacFx" Version="170.2.70" />
+    <PackageReference Update="Microsoft.SqlPackage" Version="170.3.0" />
     <PackageReference Update="Microsoft.SqlServer.DacFx.Projects" Version="0.5.2-preview" />
     <PackageReference Update="Microsoft.Azure.Kusto.Data" Version="12.2.3" />
     <PackageReference Update="Microsoft.Azure.Kusto.Language" Version="9.0.4" />
@@ -90,3 +91,4 @@
     <GlobalPackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" />
   </ItemGroup>
 </Project>
+
