adding missing variable

--- a/azure-pipelines/build-and-release.yml
+++ b/azure-pipelines/build-and-release.yml
@@ -14,6 +14,9 @@ variables:
 
 stages:
 - stage: IntegrationTests
+  variables:
+  - name: buildConfiguration
+    value: 'Release'
   jobs:
   - job: IntegrationTests
     pool:
