--- a/azure-pipelines/build-and-release.yml
+++ b/azure-pipelines/build-and-release.yml
@@ -16,7 +16,7 @@ stages:
 - stage: IntegrationTests
   variables:
   - name: buildConfiguration
-    value: 'Release'
+    value: 'Debug'
   jobs:
   - job: IntegrationTests
     pool:
