adding hint path to use the hybrid package and updated sqlpakcage service

--- a/src/Microsoft.SqlTools.ServiceLayer/Microsoft.SqlTools.ServiceLayer.csproj
+++ b/src/Microsoft.SqlTools.ServiceLayer/Microsoft.SqlTools.ServiceLayer.csproj
@@ -70,7 +70,10 @@
     <PackageReference Include="Microsoft.SqlServer.Assessment" />
     <PackageReference Include="Microsoft.SqlServer.DacFx.Projects" />
     <PackageReference Include="Microsoft.SqlServer.DacFx" />
-    <PackageReference Include="Microsoft.SqlPackage" PrivateAssets="all" />
+    <Reference Include="sqlpackage">
+      <HintPath>..\..\packages\lib\Microsoft.SqlPackage\$(SqlPackageWorkaroundVersion)\lib\net8.0\sqlpackage.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
     <PackageReference Include="Microsoft.SqlServer.Management.QueryStoreModel" />
     <PackageReference Include="Microsoft.SqlServer.Management.SmoMetadataProvider" />
     <PackageReference Include="Microsoft.SqlServer.Management.SqlParser" />
