--- a/Packages.props
+++ b/Packages.props
@@ -1,4 +1,9 @@
 <Project>
+  <PropertyGroup>
+    <!-- SqlPackage version - used in both PackageReference and direct DLL reference HintPath -->
+    <SqlPackageWorkaroundVersion>170.3.0</SqlPackageWorkaroundVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Update="System.Net.Http" Version="4.3.4" />
     <PackageReference Update="System.Runtime.Loader" Version="4.3.0" />
@@ -22,7 +27,7 @@
     <PackageReference Update="Microsoft.Data.SqlClient.AlwaysEncrypted.AzureKeyVaultProvider" Version="1.1.1" />
     <PackageReference Update="Microsoft.SqlServer.Management.SmoMetadataProvider" Version="170.18.0" />
     <PackageReference Update="Microsoft.SqlServer.DacFx" Version="170.2.70" />
-    <PackageReference Update="Microsoft.SqlPackage" Version="170.3.0" />
+    <PackageReference Update="Microsoft.SqlPackage" Version="$(SqlPackageWorkaroundVersion)" />
     <PackageReference Update="Microsoft.SqlServer.DacFx.Projects" Version="0.5.2-preview" />
     <PackageReference Update="Microsoft.Azure.Kusto.Data" Version="12.2.3" />
     <PackageReference Update="Microsoft.Azure.Kusto.Language" Version="9.0.4" />
