--- a/test/Microsoft.SqlTools.ServiceLayer.UnitTests/Microsoft.SqlTools.ServiceLayer.UnitTests.csproj
+++ b/test/Microsoft.SqlTools.ServiceLayer.UnitTests/Microsoft.SqlTools.ServiceLayer.UnitTests.csproj
@@ -20,13 +20,14 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.Data.SqlClient" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" />
-		<Reference Include="sqlpackage">
-			<HintPath>..\..\packages\lib\Microsoft.SqlPackage\$(SqlPackageWorkaroundVersion)\lib\net8.0\sqlpackage.dll</HintPath>
-			<Private>false</Private>
-		</Reference>
-		<PackageReference Include="Moq" />
+	<PackageReference Include="Microsoft.Data.SqlClient" />
+	<PackageReference Include="Microsoft.NET.Test.Sdk" />
+	<PackageReference Include="Microsoft.SqlPackage" GeneratePathProperty="true" IncludeAssets="none" />
+	<Reference Include="sqlpackage">
+		<HintPath>$(PkgMicrosoft_SqlPackage)\tools\net8.0\any\sqlpackage.dll</HintPath>
+		<Private>false</Private>
+	</Reference>
+	<PackageReference Include="Moq" />
 		<PackageReference Include="nunit.console" />
 		<PackageReference Include="nunit" />
 		<PackageReference Include="nunit3testadapter" />
