--- a/src/Microsoft.SqlTools.ServiceLayer/Microsoft.SqlTools.ServiceLayer.csproj
+++ b/src/Microsoft.SqlTools.ServiceLayer/Microsoft.SqlTools.ServiceLayer.csproj
@@ -73,7 +73,7 @@
     <PackageReference Include="Microsoft.SqlPackage" GeneratePathProperty="true" IncludeAssets="none" />
     <Reference Include="sqlpackage">
       <HintPath>$(PkgMicrosoft_SqlPackage)\tools\net8.0\any\sqlpackage.dll</HintPath>
-      <Private>false</Private>
+      <Private>true</Private>
     </Reference>
     <PackageReference Include="Microsoft.SqlServer.Management.QueryStoreModel" />
     <PackageReference Include="Microsoft.SqlServer.Management.SmoMetadataProvider" />
