--- a/src/Microsoft.SqlTools.ServiceLayer/Microsoft.SqlTools.ServiceLayer.csproj
+++ b/src/Microsoft.SqlTools.ServiceLayer/Microsoft.SqlTools.ServiceLayer.csproj
@@ -72,7 +72,7 @@
     <PackageReference Include="Microsoft.SqlServer.DacFx" />
     <PackageReference Include="Microsoft.SqlPackage" GeneratePathProperty="true" IncludeAssets="none" />
     <Reference Include="sqlpackage">
-      <HintPath>$(PkgMicrosoft_SqlPackage)\tools\net8.0\any\sqlpackage.dll</HintPath>
+      <HintPath>$(PkgMicrosoft_SqlPackage)\tools\$(TargetFramework)\any\sqlpackage.dll</HintPath>
       <Private>true</Private>
     </Reference>
     <PackageReference Include="Microsoft.SqlServer.Management.QueryStoreModel" />
