--- a/test/Microsoft.SqlTools.ServiceLayer.UnitTests/Microsoft.SqlTools.ServiceLayer.UnitTests.csproj
+++ b/test/Microsoft.SqlTools.ServiceLayer.UnitTests/Microsoft.SqlTools.ServiceLayer.UnitTests.csproj
@@ -24,7 +24,7 @@
 	<PackageReference Include="Microsoft.NET.Test.Sdk" />
 	<PackageReference Include="Microsoft.SqlPackage" GeneratePathProperty="true" IncludeAssets="none" />
 	<Reference Include="sqlpackage">
-		<HintPath>$(PkgMicrosoft_SqlPackage)\tools\net8.0\any\sqlpackage.dll</HintPath>
+		<HintPath>$(PkgMicrosoft_SqlPackage)\tools\$(TargetFramework)\any\sqlpackage.dll</HintPath>
 		<Private>true</Private>
 	</Reference>
 	<PackageReference Include="Moq" />
