Adding SqlPackage Service for supporting Sqlpackage command generation changes (#2556)
* Inital changes: sqlpakcage service with nuget import

* fixing build errors

* adding hint path to use the hybrid package and updated sqlpakcage service

* new updates

* adding test with generic command generation

* latest updates with serialized params

* still have different API method calls

* making the API to generic

* final changes

* refactoring by reusing targetFx variable

* keeping the sqlpackage command line result separate

* removing hintpatha nd using core nuget

* fixing build and tests with sqlpackage .core Nuget

* using new nuget version

* adding command line args DTO

* fixing the issues

* using Builder with latest nuget and updated tests

* refactoring and cpturing the sqlpackage exception

* adding XML comments for the methods

* adding masked option to the command request

* updating sqlpackage core nuget version

* Temporarily adding the Nuget for PR validations, will remove once the nuget publicly available

* Refactoring itno simple classes

* test fixes

* removing local nuget, the core nuget is published to nuget org

* removing the duplicated commandlineArgs and inheriting from the dacfx cmdArgs

* adding loc string and removed undo batchparser change

* vbump core nuget with the latest iteration

--- a/test/Microsoft.SqlTools.ServiceLayer.UnitTests/Microsoft.SqlTools.ServiceLayer.UnitTests.csproj
+++ b/test/Microsoft.SqlTools.ServiceLayer.UnitTests/Microsoft.SqlTools.ServiceLayer.UnitTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup Label="Configuration">
 		<OutputType>Exe</OutputType>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
@@ -22,6 +22,7 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.Data.SqlClient" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" />
+		<PackageReference Include="Microsoft.SqlPackage.Core" />
 		<PackageReference Include="Moq" />
 		<PackageReference Include="nunit.console" />
 		<PackageReference Include="nunit" />
