--- a/Packages.props
+++ b/Packages.props
@@ -79,8 +79,8 @@
     <PackageReference Update="System.Composition" Version="8.0.0" />
     <PackageReference Update="System.Configuration.ConfigurationManager" Version="9.0.4" />
     <PackageReference Update="System.Drawing.Common" Version="5.0.3" />
-    <PackageReference Update="System.IO.Packaging" Version="9.0.0-rc.2.24473.5" />
-    <PackageReference Update="System.Runtime.Caching" Version="9.0.0-rc.2.24473.5" />
+    <PackageReference Update="System.IO.Packaging" Version="9.0.5" />
+    <PackageReference Update="System.Runtime.Caching" Version="9.0.4" />
     <PackageReference Update="System.Security.Permissions" Version="8.0.0" />
     <PackageReference Update="System.Text.Encoding.CodePages" Version="8.0.0" />
     <PackageReference Update="System.Text.Encodings.Web" Version="9.0.5" />
